End of desktop version media querry include until 900px

--- a/asset/styles/_settings.scss
+++ b/asset/styles/_settings.scss
@@ -53,16 +53,25 @@ h4::selection,
 h5::selection,
 h6::selection,
 p::selection,
-img::selection,
+// img::selection,
 span::selection,
 strong::selection,
 ul::selection,
+li::selection,
 div::selection,
 button::selection,
 input::selection,
-option::selection {
+option::selection,
+select::selection {
   background: $grey2;
 }
+
+img,
+br {
+  user-select: none
+}
+
+
 
 
 h2 {
